--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Together</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/index.css" />
+    <title>Together</title>
 </head>
 
 <body>
-<div id="root"></div>
+    <div id="root"></div>
 </body>
 
 </html>
