--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link href="https://diegoddox.github.io/react-redux-toastr/7.1/react-redux-toastr.min.css" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/styles/common.css">
+    <link rel="stylesheet" href="/styles/member.css">
     <title>Together</title>
 </head>
 
