--- a/public/print-card.html
+++ b/public/print-card.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <script src="/lib/qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jsbarcode/3.6.0/barcodes/JsBarcode.code128.min.js"></script>
     <title>Print Card</title>
 </head>
 
 <style>
     @page {
         /* dimensions for the whole page */
-        size: 72mm 115mm;
+        size: 54mm 86mm  landscape;
+        
         margin: 0;
     }
 
+
+    
+
     body {
         /* A5 dimensions */
-        height: 72mm;
-        width: 115mm;
+        height: 54mm;
+        width: 86mm;
 
         margin: 0;
     }
@@ -51,31 +57,32 @@
 </style>
 
 <body style="background: white;">
-<div style="color: #FFF;width: 100%;height: 100%;display: flex; flex-direction: column;justify-content: flex-end;align-items: center;">
-    <p id="name">
+    <div
+        style="color: #2B2B2B;width: 100%;height: 100%;display: flex; flex-direction: column;justify-content: flex-end;align-items: center;">
 
-    </p>
-    <p id="id">
+        <div
+            style="display: flex;align-items: center;padding : 24px;justify-content: space-between;box-sizing: border-box;width : 100%;">
 
-    </p>
-    <div id="qrcode"></div>
-</div>
+            <div>
+                <p style="margin : 0;font-size: 22px;" id="name"></p>
+                <p style="margin : 0;font-size : 16px;color :#888;" id="expirationDate"></p>
+            </div>
+
+            <svg style="height : 50px;width : 120px;" id="barcode"></svg>
+
+        </div>
+
+    </div>
 </body>
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         let params = getUrlQueryParameters();
         document.getElementById('name').innerText = params.name ? params.name : '';
-        document.getElementById('id').innerText = params.id ? params.id : '';
+        //document.getElementById('id').innerText = params.id ? params.id : '';
+        document.getElementById('expirationDate').innerText = params.expirationDate ? params.expirationDate : ''
 
-        new QRCode(document.getElementById('qrcode'), {
-            text: params.id,
-            width: 128,
-            height: 128,
-            colorDark: "#000",
-            colorLight: "#FFF",
-            correctLevel: QRCode.CorrectLevel.H
-        });
+        JsBarcode("#barcode", params.id);
     });
 
     function getUrlQueryParameters() {
@@ -90,4 +97,5 @@
         return GET;
     }
 </script>
+
 </html>
